apps/flashcards/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
    environment: production
